# Linh

./: CMakeLists.txt  LICENSE  LICENSE.md  Main.cpp  NOTICE  README.md  REPL.cpp  REPL.hpp  SemanticAnalyzer.hpp  appicon.rc  config.cpp  config.hpp  fk.txt  sol.md  test.li  update_smallstring.md
Install/Windows/: EULA.rtf  main.iss
Li/: add.li  array.li  comprehensive_test.li  do_while.li  do_while_advanced.li  e.li  if.li  io.li  len.li  m.li  main.li  map_methods_test.li  mu.li  print.li  simple_math_test.li  sol.li  test.li  test_additional_math_functions.li  test_edge_cases.li  test_equality.li  test_interpolation.li  test_math_functions.li  test_math_phi.li  test_print_multiple.li  test_simple.li  test_simple_print.li  test_trigonometric_functions.li  test_try_catch.li  test_try_catch_simple.li  to_type.li  try.li  while.li
Li/fs/: main.li
Li/func/: test.li
LiPM/: LiPM.cpp  LiPM.hpp
LiPM/Package/: math.cpp  math.hpp  time.hpp
LiVM/: LiVM.cpp  LiVM.hpp  Loop.cpp  Loop.hpp  type.cpp  type.hpp
LiVM/Functional/: Func.cpp  Func.hpp
LiVM/Math/: Math.cpp  Math.hpp
LiVM/Value/: Value.cpp  Value.hpp
LiVM/iostream/: iostream.cpp  iostream.hpp
LinhC/: Error.hpp
LinhC/Bytecode/: Bytecode.hpp  BytecodeEmitter.cpp  BytecodeEmitter.hpp
LinhC/Parsing/AST/: ASTNode.hpp  ASTPrinter.cpp  ASTPrinter.hpp
LinhC/Parsing/Lexer/: Lexer.cpp  Lexer.hpp
LinhC/Parsing/Parser/: ParseDeclaration.cpp  ParseExpression.cpp  ParseStatement.cpp  ParseType.cpp  Parser.hpp  ParserBase.cpp
LinhC/Parsing/Semantic/: SemanticAnalyzer.cpp  SemanticAnalyzer.hpp
Parsing/AST/: Expr.hpp  Stmt.hpp
Parsing/Lexer/: Lexer.cpp  Lexer.hpp
Parsing/Parser/: Parser.cpp  Parser.hpp
Parsing/Semantic/: SemanticAnalyzer.cpp  SemanticAnalyzer.hpp
Parsing/tokenizer/: TokenTypeUtils.cpp  TokenTypeUtils.hpp
